more work on dashboard

--- a/ui/index.html
+++ b/ui/index.html
@@ -8,6 +8,7 @@
     <title>ghz</title>
     <link type="text/css" rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="//cdn.materialdesignicons.com/2.0.46/css/materialdesignicons.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/britecharts/dist/css/britecharts.min.css" type="text/css" />
 </head>
 
 <body>
