--- a/ui/index.html
+++ b/ui/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <section id="app" class="container">
+    <section id="app" class="section">
     <script src="js/main.js"></script>
 </body>
 
